--- a/WebCopyOpen.ipynb
+++ b/WebCopyOpen.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=6>**開啟網頁一頁24個項目**</font>"
+    "<font size=6>**開啟網頁一頁24個項目Ps.這邊是依照我當時測試網頁下去寫的**</font>"
    ]
   },
   {
