搶救壞掉的apk.tw Automatic sign-in檔案

--- a/apk.tw Automatic sign-in.ipynb
+++ b/apk.tw Automatic sign-in.ipynb
@@ -17,11 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "## 帳號密碼"
-=======
-    "<font size=6>**寫入帳號密碼txt**</font>"
->>>>>>> a93281f40939cf97f59fa923e8b0f00080408e24
+    "<font size=6>**登入的部分填入帳號密碼**</font>"
    ]
   },
   {
